--- a/interface/index.html
+++ b/interface/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Titre de la page</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="vue.js"></script>
 </head>
 <body>
   <div id="app">
