--- a/index.html
+++ b/index.html
@@ -12,37 +12,45 @@
   </div>
 </body>
 <script>
-var app = new Vue({
-  el: '#app',
-  data: {
-    message: 'test',
-    client: ''
-  },
-  mounted () {
-    this.client = new Paho.MQTT.Client("127.0.0.1", 61614, "clientId");
-    this.client.onConnectionLost = this.onConnectionLost;
-    this.client.onMessageArrived = this.onMessageArrived;
-    this.client.connect({ onSuccess: this.onConnect });
-  },
-  methods: {
-    onConnect() {
-      // Once a connection has been made, make a subscription and send a message.
-      console.log("onConnect");
-      this.client.subscribe("#");
-      message = new Paho.MQTT.Message("Hello");
-      message.destinationName = "World";
-      this.client.send(message);
-    },
-    onConnectionLost(responseObject) {
-      if (responseObject.errorCode !== 0) {
-        console.log("onConnectionLost:" + responseObject.errorMessage);
-      }
-    },
-    onMessageArrived(message) {
-      this.message = message.payloadString
-      console.log("onMessageArrived:" + message.payloadString);
-    }
-  }
-})
+
+	var app = new Vue(
+{
+	  el: '#app',
+	  data: {
+	    message: tabVide,
+	    client: ''
+	  },
+
+	 
+
+	  mounted () {
+	    this.client = new Paho.MQTT.Client("127.0.0.1", 61614, "clientId");
+	    this.client.onConnectionLost = this.onConnectionLost;
+	    this.client.onMessageArrived = this.onMessageArrived;
+	    this.client.connect({ onSuccess: this.onConnect });
+	  },
+	  methods: {
+	    onConnect() {
+	      // Once a connection has been made, make a subscription and send a message.
+	      console.log("onConnect");
+	      this.client.subscribe("#");
+	      message = new Paho.MQTT.Message("Hello");
+	      message.destinationName = "World";
+	      this.client.send(message);
+	    },
+
+	    onConnectionLost(responseObject) {
+	      if (responseObject.errorCode !== 0) {
+	        console.log("onConnectionLost:" + responseObject.errorMessage);
+	      }
+	    },
+	    
+	    onMessageArrived(message) {
+	      this.message = message.payloadString
+	      console.log("onMessageArrived:" + message.payloadString);
+
+	    }
+	  }
+	})
 </script>
 </html>
