rename des dossiers

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,34 @@
   <div id="top">Weather of Lille</div>
   <div id="container" style = "width: 550px; height: 400px; margin: 0 auto">
     <div id ="app"></div>
-    <div id="infos"></div>
+    <div id="infos">
+      <table>
+        <tr>
+          <td>Pressure</td>
+          <td id="pressure"></td>
+        </tr>
+        <tr>
+          <td>Wind</td>
+          <td id="wind"></td>
+        </tr>
+        <tr>
+          <td>Sunrise</td>
+          <td id="sunrise"></td>
+        </tr>
+        <tr>
+          <td>Sunset</td>
+          <td id="sunset"></td>
+        </tr>
+        <tr>
+          <td>Suntime</td>
+          <td id="sun_time"></td>
+        </tr>
+        <tr>
+          <td>Cloudiness</td>
+          <td id="weather"></td>
+        </tr>
+      </table>
+    </div>
     </div>
   <script src="vue.js"></script>
 </body>
