--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Weather of Lille</title>
   <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="style.css">
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src = "https://code.highcharts.com/highcharts.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
@@ -16,20 +16,20 @@
     <div id="infos">
       <table>
         <tr>
-          <td>Sunrise</td>
+          <td>Temps</td>
+          <td><img id ="weather" src="assets/01d.png"></td>
+        </tr>
+        <tr>
+          <td>Levé du soleil</td>
           <td id="sunrise"></td>
         </tr>
         <tr>
-          <td>Sunset</td>
+          <td>Couché du soleil</td>
           <td id="sunset"></td>
         </tr>
         <tr>
-          <td>Suntime</td>
+          <td>Temps d'ensoleillement</td>
           <td id="sun_time"></td>
-        </tr>
-        <tr>
-          <td>Cloudiness</td>
-          <td id="weather"></td>
         </tr>
       </table>
     </div>
