askip c'est fini <3

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <title>Weather of Lille</title>
+  <title>Temps de Lille</title>
   <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -10,21 +10,21 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <div id="top">Weather of Lille</div>
+  <div id="top">Temps de Lille</div>
   <div id="container" style = "width: 550px; height: 400px; margin: 0 auto">
     <div id ="app"></div>
     <div id="infos">
       <table>
         <tr>
-          <td>Temps</td>
+          <td>Ciel</td>
           <td><img id ="weather" src="assets/01d.png"></td>
         </tr>
         <tr>
-          <td>Levé du soleil</td>
+          <td>Lever du soleil</td>
           <td id="sunrise"></td>
         </tr>
         <tr>
-          <td>Couché du soleil</td>
+          <td>Coucher du soleil</td>
           <td id="sunset"></td>
         </tr>
         <tr>
